removed quality and added to getRandomElement function to change html elements after remembering how javascript works

--- a/main.html
+++ b/main.html
@@ -10,10 +10,16 @@
 <body>
     <h1>TEST</h1>
 
-    <button onclick="getRandomElement()">Beef</button>
+    <div>
+        <p id="atomicNumber"></p>
+        <p id="atomicMass"></p>
+        <p id="elementSymbol"></p>
+        <p id="elementName"></p>
+    </div>
+
     <script>
         getRandomElement();
-
     </script>
+
 </body>
 </html>
