updated color background and menu container

--- a/main.html
+++ b/main.html
@@ -12,10 +12,12 @@
 
     <div class="menu-container">
         <h1>Learn the Periodic Table!</h1>
-        <h2>Pick your game:</h2>
-        <button>Beginner</button>
-        <button>Intermediate</button>
-        <button>Hard</button>
+        <div class="game-choice-container">
+            <h2>Pick your game:</h2>
+            <button>Beginner</button>
+            <button>Intermediate</button>
+            <button>Hard</button>
+        </div>
     </div>
 
     <div class="main-element-container">
